--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/expense/expense1.jpg
+    - assets/expense/expense2.jpg
+    - assets/expense/expense3.jpg
+    - assets/expense/expense4.jpg  
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
