--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   url_launcher: ^6.3.1
   google_fonts: ^6.2.1
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
