--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   url_launcher: ^6.3.1
   google_fonts: ^6.2.1
   flutter_staggered_animations: ^1.1.1
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
@@ -62,10 +63,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/expense/expense1.jpg
-    - assets/expense/expense2.jpg
-    - assets/expense/expense3.jpg
-    - assets/expense/expense4.jpg  
+    - assets/images/flutter_developer.png
+    - assets/images/flutter_dev.jpg
+    # - assets/icons/linkedin.png
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
