--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
+  "version": 2,
+  "public": "build/web",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
   ]
 }
