--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_staggered_animations: ^1.1.1
   font_awesome_flutter: ^10.8.0
+  firebase_core: ^3.14.0
 
 dev_dependencies:
   flutter_test:
