--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   font_awesome_flutter: ^10.8.0
   firebase_core: ^3.14.0
-
+  provider: ^6.1.5+1
+  redacted: ^1.0.12
+  fluttertoast: ^9.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
